# django-rabbitmq-oddjob

./: README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  test.yml
src/django_rabbitmq_oddjob/: __init__.py  amqp_transport.py  apps.py  exceptions.py  oddjob.py  task_decorator.py  urls.py  views.py
tests/: test_amqp_transport.py  test_integration.py  test_views.py
tests/django_project/: manage.py
tests/django_project/django_project/: settings.py  tasks.py  urls.py  views.py
